Adding react router and start markdown editor
